--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2>Contact Us</h2>
       <p>We’d love to hear from you. Connect with us on LinkedIn or via email:</p>
       <div class="contact-links">
-        <a href="https://www.linkedin.com/in/" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
         <a href="#" id="copyEmailLink">Email: svanta2024@gmail.com</a>
       </div>
     </div>
